# archive

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  MANIFEST.in  Makefile  README.md  README.rst  ahrs.c  build.rs  build.zig  ca-lpf.h  ca-pid.c  ca-pid.h  ca.c  ca.h  ca_lpf.h  ca_math.h  ca_pid.c  ca_pid.h  check-.cmake  check.cmake  cmake-arm-none-eabi.cmake  conanfile.py  meson.build  meson_options.txt  requirements.txt  setup.cfg  setup.py  standard.cmake  test.c  vcpkg.json  xmake.lua  zyx.c
ca/: CMakeLists.txt  ahrs.c  ahrs.h  ca-lpf.h  ca-math.c  ca-math.h  ca-pid.c  ca-pid.h  ca.c  ca.h  ca_lpf.h  ca_math.c  ca_math.h  ca_pid.c  ca_pid.h  notefreqs.h  polynomial.c  polynomial.h  zyx.c  zyx.h
cmake/: FindBlack.cmake  FindCCache.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCython.cmake  FindIWYU.cmake  FindLDoc.cmake  FindLua.cmake  FindLuaFormat.cmake  FindTalloc.cmake  FindZig.cmake  Findcppcheck.cmake  InstallLibtool.cmake  TargetSupportsRelocatable.cmake  UseArmNoneEabi.cmake  UseMinGW32.cmake  UseMinGW64.cmake  arm-none-eabi.cmake  check-.cmake  check.cmake  clang.cmake  config.cmake.in  config.h  config.hpp  config.pc  config.pc.in  core.cmake  git.cmake  (+12 more)
cmake/object/: CMakeLists.txt
ffi/: CMakeLists.txt
ffi/cc/: source.pyx
ffi/java/: CMakeLists.txt  a.c  a.java  aa.cpp  aa.java  test.cmake  testing.cmake
ffi/java/liba/: a.java  aa.java  ac.java  ax.java
ffi/java/src/: a.c  a.cpp  a.h  aa.cpp  ac.java  fpid.c  fpid.h  jni.h  lib.c  lib.cpp  lib.h  lib.hpp  mf.c  pid.c  pid.h  polytrack3.c  polytrack3.h  polytrack5.c  polytrack5.h  polytrack7.c  polytrack7.h  tf.c  tf.h
ffi/java/src/liba/: a.java  ac.java  ax.java  fpid.java  pid.java
ffi/java/test/: aTest.java  aaTest.java  acTest.java  axTest.java  test.java
ffi/javascript/: CMakeLists.txt  test.cmake
ffi/javascript/src/: a.h  lib.c  lib.cc  lib.h  pid.c  version.c
ffi/javascript/test/: fpid.js  lib.js  pid.js  polytrack.js  version.js
ffi/lua/: CMakeLists.txt  lhash.c  test.cmake  xmake.lua
ffi/lua/cmake/: CMakeLists.txt  config.ld  warnings.cmake
ffi/lua/cmake/cmake/: CMakeLists.txt  config.pc
ffi/lua/lua/: CMakeLists.txt
ffi/lua/lua/cmake/: CMakeLists.txt  FindReadLine.cmake  config.pc
ffi/lua/lua/src/: CMakeLists.txt
ffi/lua/src/: a.c  a.h  api.c  api.h  complex.c  complex.h  ffi.c  ffi.h  fpid.c  fpid.h  lib.c  lua.c  lua.h  mf.c  mf.h  pid.c  pid.h  polytrack3.c  polytrack3.h  polytrack5.c  polytrack5.h  polytrack7.c  polytrack7.h  tf.c  tf.h  version.c  version.h
ffi/lua/test/: CMakeLists.txt  a.lua  complex.lua  fpid.lua  lib.lua  mf.lua  pid.lua  polytrack.lua  test.lua  tf.lua  version.lua
ffi/python/: CMakeLists.txt  a.pyx  aa.pyx  ac.pyx  ax.pyx
ffi/python/a/: a.pxi
ffi/python/aa/: source.pxd  source.pxi
ffi/python/src/: a.pxd  a.pxi  a_math.pxd  a_version.pxd  aa.pxd  aa.pxi  aa_version.pxd  ac.pxd  ac.pxi  ac.pyx  ac_version.pxd  ax.pxd  ax.pxi  ax.pyx  ax_version.pxd  lib.pyx
ffi/python/src/a/: __init__.pxd  __init__.pxi  fpid.pxd  fpid.pxi  math.pxd  math.pxi  mf.pxi  pid.pxd  pid.pxi  poly.pxd  poly.pxi  polytrack.pxd  polytrack.pxi  tf.pxd  tf.pxi  version.pxi
ffi/python/src/ac/: __init__.pxd  fpid.pxd  fpid.pxi  math.pxd  math.pxi  mf.pxd  mf.pxi  pid.pxd  pid.pxi  poly.pxd  poly.pxi  polytrack.pxd  polytrack.pxi  tf.pxd  tf.pxi  version.pxd  version.pxi
ffi/python/src/ax/: __init__.pxd  version.pxd  version.pxi
ffi/python/test/: a.py  aa.py  ac.py  ax.py  test.py
ffi/python/test/a/: fpid.py  poly.py  polytrack.py  tf.py
ffi/python/test/ac/: fpid.py  mf.py  pid.py  poly.py  polytrack.py  tf.py
ffi/quickjs/: CMakeLists.txt
ffi/quickjs/src/: a.h  lib.c
ffi/quickjs/test/: CMakeLists.txt  lib.js
ffi/swig/: CMakeLists.txt
liba/: .clang-format  .gitattributes  .gitignore  CMakeLists.cmake  CMakeLists.txt  Doxyfile  Makefile  README.md  a_ahrs.c  a_ahrs.h  a_base.c  a_base.h  a_blake2b.c  a_blake2b.h  a_blake2s.c  a_blake2s.h  a_convert.c  a_convert.h  a_hash.c  a_hash.h  a_hash_blake2b.c  a_hash_blake2b.h  a_hash_blake2s.c  a_hash_blake2s.h  a_hash_md2.c  a_hash_md2.h  a_hash_md4.c  a_hash_md4.h  a_hash_md5.c  a_hash_md5.h  a_hash_rmd.c  a_hash_rmd.h  a_hash_sha1.c  a_hash_sha1.h  a_hash_sha2.c  a_hash_sha2.h  a_hash_sha3.c  a_hash_sha3.h  a_hash_tiger.c  a_hash_tiger.h  (+62 more)
liba/crc/: a_crc.c  a_crc.h
liba/hash/: a_blake2b.c  a_blake2b.h  a_blake2s.c  a_blake2s.h  a_hash.c  a_hash.h  a_hash_util.c  a_hash_util.h  a_hmac.c  a_hmac.h  a_hmac_util.c  a_hmac_util.h  a_md2.c  a_md2.h  a_md4.c  a_md4.h  a_md5.c  a_md5.h  a_rmd.c  a_rmd.h  a_sha1.c  a_sha1.h  a_sha2.c  a_sha2.h  a_sha3.c  a_sha3.h  a_tiger.c  a_tiger.h  a_whirl.c  a_whirl.h
liba/poly/: a_poly.c  a_poly.h  a_polytrack.c  a_polytrack.h
test/: CMakeLists.txt  Makefile  a.c  a.cpp  a.h  a_test.h  arr.c  arr.cpp  arr.h  atest.h  avl.h  base.c  base.cpp  bkdr.c  bst_avl.cpp  bst_avl.h  bst_rb.cpp  bst_rb.h  buf.h  complex.c  complex.cpp  complex.h  crc.c  crc.cpp  crc.h  for.c  for.cc  for.cpp  for.h  fpid.c  fpid.cpp  fpid.h  hash.c  hash.cpp  hmac.c  hmac.cpp  lib.cpp  lib.h  list.c  list.cc  (+82 more)
test/host/: CMakeLists.txt  __vec__.c  __vec__.cc  __vector__.c  __vector__.cc  que.c  que.cc  que.cpp  que.h  str.c  str.cc  str.cpp  str.h  vec.c  vec.cc  vec.cpp  vec.h  vector.c  vector.cc  vector.cpp  vector.h  vectors.c  vectors.cc  vectors.h  xmake.lua
test/misc/: CMakeLists.txt  notefreqs.c  xmake.lua
tests/: CMakeLists.txt  imag.c  imag.cc  imag.cpp  operator.c  real.c  test.c  test.cc  test.cpp
tests/cksum/: CMakeLists.txt  crc.c  hash.c  hmac.c  test.h
tests/controller/: CMakeLists.txt  fpid.c  fpid.cc  fpid.cpp  fpid.py  fuzzy.c  fuzzy.cc  fuzzy.cpp  mf.c  mf.cc  mf.cpp  mf.py  pid.c  pid.cc  pid.cpp  pid.py
tests/filter/: CMakeLists.txt  lpf.c  lpf.cc  lpf.cpp  lpf.py
tests/misc/: CMakeLists.txt  base.c  list.c  math.c  mean.c  mean.cc  mean.cpp  mempool.c  notefreqs.c  slist.c  str.c  vec.c  zyx.c  zyx.cc  zyx.cpp
tests/poly/: CMakeLists.txt  polytrack.c  polytrack.cc  polytrack.cpp  polytrack.py
(+299 files in other folders)
