[package]
name = "liba"
version = "0.1.0"
authors = ["tqfx <tqfx@foxmail.com>"]
edition = "2021"
description = """
An algorithm library based on C language.
"""
documentation = "https://tqfx.org/a/"
repository = "https://github.com/tqfx/a.git"
homepage = "https://github.com/tqfx/a.git"
license = "MPL-2.0"
keywords = ["algorithm"]
categories = ["algorithms"]

[build-dependencies]
cmake = "0.1"

[dependencies]
cty = "0.2"

[lib]
name = "a"
